# bowline

./: .coveragerc  .editorconfig  .flake8  .gitignore  404.html  README.md  README.rst  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  yamllint-config.yaml
.github/workflows/: ci.yml  code_quality_checks.yml  docs.yml  docs_publish.yml  publish.yml  pypi_publish.yml  test_publish.yml  test_pypi_publish.yml
bowline/: __init__.py  preprocessors.py  utils.py
bowline/preprocessors/: __init__.py
data_preprocessor/: __init__.py
data_preprocessor/preprocessors/: __init__.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
tests/: test_init.py  test_preprocessors.py  test_utils.py
tests/test_files/standard_preprocessor/all_estimators_run/: raw_data.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
tests/test_files/standard_preprocessor/no_estimators_run/: x.csv  y.csv
