[tool.poetry]
name = "bowline"
version = "0.1.2"
description = "Configurable tools to easily pre and post process your data for data-science and machine learning."
authors = ["Marco Gancitano <marco.gancitano97@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mgancita/bowline"
repository = "https://github.com/mgancita/bowline"
keywords = ["preprocess", "machine learning", "data science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
]
include = ["LICENSE", "bowline/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
pydocstyle = "5.0.0"
flake8 = "3.8.4"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
pep8-naming = "0.11.0"
flake8-colors = "0.1.6"
pyflakes = "2.2.0"
pep8 = "1.7.1"
mypy = "0.790"
black = "20.8b1"

[tool.black]
line-length=100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
