[tool.black]
line-length=100

[tool.coverage.run]
include = ["bowline/*"]
omit = ["bowline/__init__.py", "*tests*"]

[tool.poetry]
name = "bowline"
version = "0.0.0"
description = "Configurable tools to easily pre and post process your data for data-science and machine learning."
authors = ["Marco Gancitano <marco.gancitano97@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mgancita/bowline"
repository = "https://github.com/mgancita/bowline"
keywords = ["preprocess", "machine learning", "data science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
]
include = ["LICENSE", "bowline/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.10.1"
pydocstyle = "5.0.0"
flake8 = "3.8.4"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
pep8-naming = "0.11.0"
flake8-colors = "0.1.6"
pyflakes = "2.2.0"
pep8 = "1.7.1"
mypy = "0.790"
black = "20.8b1"
mkdocs-material = "^6.1.5"
pylint = "^2.6.0"


[tool.pylint.format]
good-names="x, y"

# --------------------------------------------------------------------------------------------
# Use `pylint --help-msg=W0232` to get the more readable form and a definition of this error
# --------------------------------------------------------------------------------------------
# C0103: Invalid Name: False positive whenever we create a logger.
# C0301: Line too long: Not a blocker for now but should clean this up.
# C0330: Bad continuation: False positive - https://github.com/PyCQA/pylint/issues/289.  Triggered by Black.
# C0411: Wrong import order:  Using flake8-import-order to manage imports
# C0412: Ungrouped imports:  Using flake8-import-order to manage imports
# R0201: Method could be a function: Grouping Pytest functions under test classes cause this error.
# R0801: Similar lines in 2 files: Useful, causes issue with future imports.
# R0902: too many class attributes
# R0903: Too few public methods
# R0904: Too many public methods
# R0913: Too many arguments
# R0914: Too many local variables
# W0221: Parameters differ from overriden method
# W0232: Class has no __init__ method: Abstract classes can't have init.
# W0511: Used when a warning note as FIXME or XXX is detected (e.g. TODO: ...).
# W0621: Redefining name '...' from outer scope: Pytest parametrizes fixtures and causes this error.
[tool.pylint.message_control]
# disable="C0103,C0301,C0330,C0411,C0412,R0201,R0801,R0902,R0903,R0904,R0913,R0914,W0221,W0232,W0511,W0621"
disable="R0911, R0913, W0212"

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=bowline --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
